// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Controls/Animated Button Animated Button 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <button
    css={
      Array [
        Object {
          "map": undefined,
          "name": "1dpsly4",
          "next": undefined,
          "styles": "
  background-color: rgb(230, 230, 230);
  background: linear-gradient(180deg, rgb(230, 230, 230) 60%, rgb(180, 180, 180) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(246, 246, 246) 60%, rgb(180, 180, 180) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(230, 230, 230);
  }
",
          "toString": [Function],
        },
        Object {
          "&:hover": Object {
            "color": "#000",
          },
          "color": "#000",
          "margin": 4,
          "padding": "1px 4px",
          "position": "relative",
        },
      ]
    }
    onClick={[Function]}
    title="Click me!"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Crypted/Copy Button With Title 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <button
    css={
      Array [
        Object {
          "map": undefined,
          "name": "1dpsly4",
          "next": undefined,
          "styles": "
  background-color: rgb(230, 230, 230);
  background: linear-gradient(180deg, rgb(230, 230, 230) 60%, rgb(180, 180, 180) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(246, 246, 246) 60%, rgb(180, 180, 180) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(230, 230, 230);
  }
",
          "toString": [Function],
        },
        Object {
          "&:hover": Object {
            "color": "#000",
          },
          "color": "#000",
          "margin": 4,
          "padding": "1px 4px",
          "position": "relative",
        },
      ]
    }
    onClick={[Function]}
    title="Title"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-w-14 "
      data-icon="copy"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;

exports[`Storyshots Crypted/Copy Button Without Title 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <button
    css={
      Array [
        Object {
          "map": undefined,
          "name": "1dpsly4",
          "next": undefined,
          "styles": "
  background-color: rgb(230, 230, 230);
  background: linear-gradient(180deg, rgb(230, 230, 230) 60%, rgb(180, 180, 180) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(246, 246, 246) 60%, rgb(180, 180, 180) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(230, 230, 230);
  }
",
          "toString": [Function],
        },
        Object {
          "&:hover": Object {
            "color": "#000",
          },
          "color": "#000",
          "margin": 4,
          "padding": "1px 4px",
          "position": "relative",
        },
      ]
    }
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-w-14 "
      data-icon="copy"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;

exports[`Storyshots Crypted/Email Email 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <a
    className="crypted-email"
    css={
      Object {
        "&:after": Object {
          "content": "attr(data-name) \\"@\\" attr(data-domain) \\".\\" attr(data-tld)",
        },
        "marginRight": 4,
      }
    }
    data-domain="domain"
    data-name="name"
    data-tld="tld"
    href="#"
    onClick={[Function]}
    title="Write email"
  />,
  <button
    css={
      Array [
        Object {
          "map": undefined,
          "name": "1dpsly4",
          "next": undefined,
          "styles": "
  background-color: rgb(230, 230, 230);
  background: linear-gradient(180deg, rgb(230, 230, 230) 60%, rgb(180, 180, 180) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(246, 246, 246) 60%, rgb(180, 180, 180) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(230, 230, 230);
  }
",
          "toString": [Function],
        },
        Object {
          "&:hover": Object {
            "color": "#000",
          },
          "color": "#000",
          "margin": 4,
          "padding": "1px 4px",
          "position": "relative",
        },
      ]
    }
    onClick={[Function]}
    title="Copy email address"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-w-14 "
      data-icon="copy"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;

exports[`Storyshots Crypted/Phone Phone 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <span
    css={
      Object {
        "&:after": Object {
          "content": "attr(data-country) \\"\\\\202f\\" attr(data-area) \\"\\\\202f\\" attr(data-block0) \\"\\\\202f\\" attr(data-block1)",
        },
        "marginRight": 4,
      }
    }
    data-area="174"
    data-block0="123"
    data-block1="4567"
    data-country="+49"
  />,
  <button
    css={
      Array [
        Object {
          "map": undefined,
          "name": "1dpsly4",
          "next": undefined,
          "styles": "
  background-color: rgb(230, 230, 230);
  background: linear-gradient(180deg, rgb(230, 230, 230) 60%, rgb(180, 180, 180) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(246, 246, 246) 60%, rgb(180, 180, 180) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(230, 230, 230);
  }
",
          "toString": [Function],
        },
        Object {
          "&:hover": Object {
            "color": "#000",
          },
          "color": "#000",
          "margin": 4,
          "padding": "1px 4px",
          "position": "relative",
        },
      ]
    }
    onClick={[Function]}
    title="Copy phone number"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-copy fa-w-14 "
      data-icon="copy"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;

exports[`Storyshots Doveseed/Confirmation Button Error 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
      value="foo@example.com"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={0}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 fa-fw "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <input
      required={true}
      type="hidden"
      value="some-opaque-token"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Confirmation Button Initial 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
      value="foo@example.com"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={0}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            Object {
              "map": undefined,
              "name": "16a307k",
              "next": undefined,
              "styles": "width:0;margin-right:0;opacity:0;",
              "toString": [Function],
            },
          ]
        }
      />
      Submit
    </button>
    <input
      required={true}
      type="hidden"
      value="some-opaque-token"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Confirmation Button Request Ongoing 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
      value="foo@example.com"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={true}
      tabIndex={0}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-circle-notch fa-w-16 fa-fw "
          css={
            Object {
              "animation": "_EMO_animation-984z7i_@keyframes animation-984z7i{
  100% { transform: rotate(360deg); }
}_EMO_ 1s linear infinite",
            }
          }
          data-icon="circle-notch"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <input
      required={true}
      type="hidden"
      value="some-opaque-token"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Confirmation Button Success 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
      value="foo@example.com"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {
            "background": "#33a11d !important",
          },
        ]
      }
      disabled={true}
      tabIndex={0}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 fa-fw "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <input
      required={true}
      type="hidden"
      value="some-opaque-token"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Email submission form Error 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={false}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 fa-fw "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <div
      id="child"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Email submission form Fixed Value 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
      value="foo@example.com"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={0}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            Object {
              "map": undefined,
              "name": "16a307k",
              "next": undefined,
              "styles": "width:0;margin-right:0;opacity:0;",
              "toString": [Function],
            },
          ]
        }
      />
      Submit
    </button>
    <div
      id="child"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Email submission form Initial 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      disabled={false}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            Object {
              "map": undefined,
              "name": "16a307k",
              "next": undefined,
              "styles": "width:0;margin-right:0;opacity:0;",
              "toString": [Function],
            },
          ]
        }
      />
      Submit
    </button>
    <div
      id="child"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Email submission form Request Ongoing 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={true}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-circle-notch fa-w-16 fa-fw "
          css={
            Object {
              "animation": "_EMO_animation-984z7i_@keyframes animation-984z7i{
  100% { transform: rotate(360deg); }
}_EMO_ 1s linear infinite",
            }
          }
          data-icon="circle-notch"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <div
      id="child"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Email submission form Success 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {
            "background": "#33a11d !important",
          },
        ]
      }
      disabled={true}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 fa-fw "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <div
      id="child"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Email submission form With Email 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={false}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            Object {
              "map": undefined,
              "name": "16a307k",
              "next": undefined,
              "styles": "width:0;margin-right:0;opacity:0;",
              "toString": [Function],
            },
          ]
        }
      />
      Submit
    </button>
    <div
      id="child"
    />
  </form>,
]
`;

exports[`Storyshots Doveseed/Processing State Icon Error 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-times fa-w-11 fa-fw "
    data-icon="times"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 352 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>,
]
`;

exports[`Storyshots Doveseed/Processing State Icon Initial 1`] = `
<style
  type="text/css"
>
  
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

</style>
`;

exports[`Storyshots Doveseed/Processing State Icon Request Ongoing 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle-notch fa-w-16 fa-fw "
    css={
      Object {
        "animation": "_EMO_animation-984z7i_@keyframes animation-984z7i{
  100% { transform: rotate(360deg); }
}_EMO_ 1s linear infinite",
      }
    }
    data-icon="circle-notch"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>,
]
`;

exports[`Storyshots Doveseed/Processing State Icon Success 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-check fa-w-16 fa-fw "
    data-icon="check"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>,
]
`;

exports[`Storyshots Doveseed/Subscribe Form Error 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={false}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 fa-fw "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <div />
  </form>,
]
`;

exports[`Storyshots Doveseed/Subscribe Form Initial 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={false}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={false}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            Object {
              "map": undefined,
              "name": "16a307k",
              "next": undefined,
              "styles": "width:0;margin-right:0;opacity:0;",
              "toString": [Function],
            },
          ]
        }
      />
      Submit
    </button>
    <div />
  </form>,
]
`;

exports[`Storyshots Doveseed/Subscribe Form Request Ongoing 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {},
        ]
      }
      disabled={true}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-circle-notch fa-w-16 fa-fw "
          css={
            Object {
              "animation": "_EMO_animation-984z7i_@keyframes animation-984z7i{
  100% { transform: rotate(360deg); }
}_EMO_ 1s linear infinite",
            }
          }
          data-icon="circle-notch"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 39.056v16.659c0 10.804 7.281 20.159 17.686 23.066C383.204 100.434 440 171.518 440 256c0 101.689-82.295 184-184 184-101.689 0-184-82.295-184-184 0-84.47 56.786-155.564 134.312-177.219C216.719 75.874 224 66.517 224 55.712V39.064c0-15.709-14.834-27.153-30.046-23.234C86.603 43.482 7.394 141.206 8.003 257.332c.72 137.052 111.477 246.956 248.531 246.667C393.255 503.711 504 392.788 504 256c0-115.633-79.14-212.779-186.211-240.236C302.678 11.889 288 23.456 288 39.056z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <div />
  </form>,
]
`;

exports[`Storyshots Doveseed/Subscribe Form Success 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <form
    className="email-submission-form"
    css={
      Object {
        "&:focus-within": Object {
          "boxShadow": "0 0 8px #336cc6",
        },
        "borderRadius": 4,
        "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5)",
        "display": "flex",
      }
    }
    onSubmit={[Function]}
  >
    <input
      css={
        Object {
          "&:invalid": Object {
            "border": "none",
            "boxShadow": "none",
          },
          "background": "#fff",
          "border": "none",
          "borderRadius": "4px 0 0 4px",
          "color": "#000",
          "flexGrow": 1,
          "height": "100%",
          "outline": "none",
          "padding": 8,
        }
      }
      defaultValue="foo@example.com"
      disabled={true}
      placeholder="Email address"
      required={true}
      type="email"
    />
    <button
      css={
        Array [
          Object {
            "map": undefined,
            "name": "76spxc",
            "next": undefined,
            "styles": "
  background-color: rgb(51, 108, 198);
  background: linear-gradient(180deg, rgb(51, 108, 198) 60%, rgb(31, 59, 105) 100%);
  border: none;
  border-radius: 4px;
  padding: 8px;
  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
  transition: 0.2s;
  cursor: pointer;
  display: inline-block;

  margin-left: 8px;
  margin-right: 8px;

  &:hover {
    background-color: $highlight;
    background: linear-gradient(180deg, rgb(67, 124, 214) 60%, rgb(31, 59, 105) 100%);
  }

  &:active {
    transition: 0s;
    background: rgb(51, 108, 198);
  }
;;
    color: #fff;
    text-decoration: none;

    &:hover {
      color: #fff;
    }
  ;;",
            "toString": [Function],
          },
          Object {
            "borderRadius": "0 4px 4px 0",
            "boxShadow": "-1px 0 1px rgba(0, 0, 0, 0.5)",
            "margin": 0,
            "outline": "none",
          },
          Object {
            "background": "#33a11d !important",
          },
        ]
      }
      disabled={true}
      tabIndex={-1}
      type="submit"
    >
      <span
        css={
          Array [
            Object {
              "map": undefined,
              "name": "1wm6gmt",
              "next": undefined,
              "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
              "toString": [Function],
            },
            undefined,
          ]
        }
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 fa-fw "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
      Submit
    </button>
    <div />
  </form>,
]
`;

exports[`Storyshots Doveseed/VCollapsible Collapsed 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <span>
    [
    <span
      css={
        Array [
          Object {
            "map": undefined,
            "name": "1wm6gmt",
            "next": undefined,
            "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
            "toString": [Function],
          },
          Object {
            "map": undefined,
            "name": "16a307k",
            "next": undefined,
            "styles": "width:0;margin-right:0;opacity:0;",
            "toString": [Function],
          },
        ]
      }
    >
      Children
    </span>
    ]
  </span>,
]
`;

exports[`Storyshots Doveseed/VCollapsible Open 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <span>
    [
    <span
      css={
        Array [
          Object {
            "map": undefined,
            "name": "1wm6gmt",
            "next": undefined,
            "styles": "display:inline-block;transition:0.2s ease-out;height:100%;overflow:hidden;vertical-align:middle;margin-right:4px;opacity:1;",
            "toString": [Function],
          },
          undefined,
        ]
      }
    >
      Children
    </span>
    ]
  </span>,
]
`;

exports[`Storyshots Flags/De De 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <span
    className="flag-icon flag-icon-de"
    css={
      Object {
        "marginRight": 4,
      }
    }
  />,
]
`;

exports[`Storyshots Flags/Split En Split En 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <span
    css={
      Object {
        "display": "inline-block",
        "height": "1em",
        "lineHeight": "1em",
        "marginRight": 4,
        "position": "relative",
        "span": Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        "verticalAlign": "text-top",
        "width": "calc((4/3) * 1em)",
      }
    }
  >
    <span
      className="flag-icon flag-icon-us"
    />
    <span
      className="flag-icon flag-icon-gb"
      css={
        Object {
          "clipPath": "polygon(0% 100%, 100% 0%, 100% 100%)",
        }
      }
    />
  </span>,
]
`;

exports[`Storyshots Post/Elevation Profile Elevation Profile 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <div
    css={
      Object {
        "height": "50vh",
        "margin": "16px 64px",
        "maxHeight": 400,
        "minHeight": 200,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots Post/Elevation Profile Tooltip 1`] = `
Array [
  <style
    type="text/css"
  >
    
  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Regular.woff2") format("woff2"),
      url("/fonts/LatoLatin-Regular.woff") format("woff");
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Italic.woff2") format("woff2"),
      url("/fonts/LatoLatin-Italic.woff") format("woff");
    font-style: italic;
    font-display: swap;
  }

  @font-face {
    font-family: "Lato";
    src: url("/fonts/LatoLatin-Bold.woff2") format("woff2"),
      url("/fonts/LatoLatin-Bold.woff") format("woff");
    font-weight: bold;
    font-display: swap;
  }

  body {
    font-family: "Lato", sans-serif;
    font-size: 16px;
  }

  a {
    color: #336cc6;
    text-decoration: none;
  }

  a:hover {
    color: #dd16c9;
  }

  </style>,
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <dl
      css={
        Object {
          "alignItems": "baseline",
          "background": "#fff",
          "borderRadius": 4,
          "boxShadow": "0 1px 2px rgba(0, 0, 0, 0.5);",
          "display": "grid",
          "gridColumnGap": "1ex",
          "gridTemplateColumns": "auto auto",
          "padding": 4,
        }
      }
    >
      <dt>
        Distance:
      </dt>
      <dd
        css={
          Object {
            "fontWeight": "bold",
            "margin": 0,
          }
        }
      >
        100
        km
      </dd>
      <dt>
        Elevation:
      </dt>
      <dd
        css={
          Object {
            "fontWeight": "bold",
            "margin": 0,
          }
        }
      >
        500
        m
      </dd>
    </dl>
  </div>,
]
`;
